--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body, main{
 
     height: 100svh;
     width: 100svw;
+
+    overflow: hidden;
 }
 main{
     background-image: url(https://images.unsplash.com/photo-1679240339099-1759c6576e96?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=714&q=80);
@@ -28,8 +30,6 @@ main{
 
     transition: transform 500ms ease-out;
 }
-
-
 
 
 #toggle{
@@ -85,35 +85,10 @@ nav{
 
     gap: clamp(1rem, 2vw, 2rem);
 
-    /*margin-top: clamp(2rem, 2vw, 3rem);*/
-    /*padding: 0 clamp(1rem, 2vw, 2rem);*/
-
     transform:  scale(0.9);
     transition: transform 500ms ease-out;
 }
 
-.item{
-    height: 24vh;
-    width: 28vw;
-
-    background-size: cover;
-}
-
-.item:nth-child(1){
-    background-image: url(https://images.unsplash.com/photo-1679341653239-3943bfe40a1a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=874&q=80);
-}
-.item:nth-child(2){
-    background-image: url(https://images.unsplash.com/photo-1679504808271-237ad3ae0d7d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=892&q=80);
-}
-.item:nth-child(3){
-    background-image: url(https://images.unsplash.com/photo-1679347882414-c52d1df0b6c7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
-}
-.item:nth-child(4){
-    background-image: url(https://images.unsplash.com/photo-1678889284769-b7dcbec1f082?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80);
-}
-.item:nth-child(5){
-    background-image: url(https://images.unsplash.com/photo-1678889284805-5c86fb1dba5a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80);
-}
 
 body[data-state="true"] > nav >#links{
     transform: translateY(-25%); scale(1);
@@ -143,4 +118,22 @@ body[data-state="true"] > main{
     .item:nth-child(5){
         display: none;
     }
+}
+
+
+#image-track {
+    display: flex;
+    gap: 4vmin;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-30%, -50%);
+    user-select: none;
+}
+
+#image-track > .image {
+    width: 40vmin;
+    height: 46vmin;
+    object-fit: cover;
+    object-position: 100% center;
 }
